--- a/static/static/site.css
+++ b/static/static/site.css
@@ -82,6 +82,10 @@ body>.container-fluid, body>.container {
 	margin-top: 20px;
 }
 
+.content-container img {
+	max-width: 100%;
+}
+
 /*.box {
 	-webkit-box-shadow: 0px 0px 0px 5px rgba(60,60,60,1);
 	-moz-box-shadow: 0px 0px 0px 5px rgba(60,60,60,1);
